# ASR_webapp

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  SETUP_SERVER_FULL.md  launch_server.py  pyproject.toml  run.bat  run.ps1  run.sh  run_simple.bat  setup_windows.ps1
.github/workflows/: docker-pr.yml
docker/: duckdns-updater.sh  entrypoint.sh
server/: __init__.py  app.py  debug_app.py  manage.py  models.py  requirements.txt  security.py  test_simple.py
server/static/: app_shell.css
server/templates/: admin_2fa_setup.html  admin_audit.html  admin_users.html  forgot_password.html  login.html  reset_password.html
tests/: conftest.py  test_app.py  test_debug_app.py  test_manage.py  test_metadata.py  test_runs_reports.py  test_security.py  test_webapp_visualizer.py
webapp/: index.html  manifest.webmanifest  sw.js
