[project]
name = "asr-webapp"
version = "0.3.4"
description = "Web application frontend/backend for Jetson ASR service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-multipart", # pour upload de fichiers
  "websockets",
  "pydantic>=2",
  "aiohttp",
  "requests",
  "flask",
  "flask-cors",
  "werkzeug",
  "gunicorn>=23.0.0",
  "supervisor>=4.3.0",
  "pytest>=8.4.2",
  "flask-sqlalchemy>=3.1.1",
  "sqlalchemy>=2.0.30",
  "argon2-cffi>=23.1.0",
  "flask-limiter>=3.5.0",
  "pyotp>=2.9.0",
  "cryptography==41.0.7",
  "pillow>=12.0.0",
  "pytest-cov>=7.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "httpx",
  "ruff",
  "black",
  "mypy"
]

[tool.uv]
# Active le venv local ./.venv automatiquement
index-strategy = "first-index"
